# solola

./: .gitignore  Pipfile  main.py  prerequisites.sh  pyproject.toml  requirements.txt
docker/: Dockerfile.dev  Dockerfile.pipenv.dev  README.md  dev.Dockerfile  entry.sh
service/: service.py  start_dev_server.sh
service/output_dir/test/: MidiMelody.txt
services/API/: api.py
solola/: Configuration.py
solola_wrapper/: Configuration.py  Solola.py
