[tool.poetry]
name = "solola"
version = "0.1.0"
description = "a guitar note and technique transcription algorithm"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
nose = "^1.3"
librosa = "*"
future = "*"
Cython = "*"
mir_eval = "*"
Theano = "==0.8.2"
Lasagne = "*"
ipython = "*"
numpy = "*"
matplotlib = "*"
pyyaml = "*"
Flask = "^1.1"
pytest = "^5.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
